feat: add delete front